Added authentication with auth0

--- a/views/index.pug
+++ b/views/index.pug
@@ -2,12 +2,16 @@ extends layout
 
 block layout-content
   div.View.WelcomeView
-    h1.Banner WHATABYTE
+    h1.Banner BUSYBEE
     div.Message
       div.Title
-        h3 Making the Best
+        h3 Wake up to Learm More
         h1 Food For Devs
-      span.Details Access the WHATABYTE Team Portal
+      span.Details Access the BUSYBEE Workspace
     div.NavButtons
-      a(href="/user")
-          div.NavButton Just dive in!
+      if isAuthenticated
+        a(href="/user")
+          div.NavButton Start learning!
+      else
+        a(href="/login")
+          div.NavButton Log in
